compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__missing_utf_8_option_in_bit_array_constant_segment_requires_v1_5.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub const bits = <<\"hello\">>"
---
----- SOURCE CODE
pub const bits = <<"hello">>

----- WARNING
warning: Incompatible rakun version range
  ┌─ /src/warning/wrn.rakun:1:20
  │
1 │ pub const bits = <<"hello">>
  │                    ^^^^^^^ This requires a Rakun version >= 1.5.0

The ability to omit the `utf8` annotation for string segments was
introduced in version v1.5.0. But the Rakun version range specified in
your `rakun.toml` would allow this code to run on an earlier version like
v1.0.0, resulting in compilation errors!
Hint: Remove the version constraint from your `rakun.toml` or update it to be:

    rakun = ">= 1.5.0"
