compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__panic_used_as_function_3.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn main() {\n          panic(1, Nil)\n        }"
---
----- SOURCE CODE
pub fn main() {
          panic(1, Nil)
        }

----- WARNING
warning: Panic used as a function
  ┌─ /src/warning/wrn.rakun:2:17
  │
2 │           panic(1, Nil)
  │                 ^^^^^^

`panic` is not a function and will crash before it can do anything with
these arguments.

Hint: if you want to display an error message you should write
`panic as "my error message"`
See: https://tour.rakun.run/advanced-features/panic/
